[package]
name = "zbase32"
version = "0.0.4"
description = "Implementation of zbase32."
documentation = "https://docs.rs/two-lock-queue"
repository = "https://github.com/pgerber/zbase32-rust"
authors = ["Peter Gerber <peter@arbitrary.ch>"]
keywords = ["zbase32"]
license = "LGPL-3.0+"

[badges]
travis-ci = { repository = "pgerber/zbase32-rust" }

[dependencies]
clippy = { version = "0.0", optional = true }

[dev-dependencies]
quickcheck = "0.4"
rand = "0.3"
