[package]
name = "zbase32"
version = "0.1.1"
description = "Implementation of zbase32."
documentation = "https://docs.rs/zbase32"
repository = "https://github.com/pgerber/zbase32-rust"
authors = ["Peter Gerber <peter@arbitrary.ch>"]
keywords = ["zbase32"]
license = "LGPL-3.0+"

[badges]
travis-ci = { repository = "pgerber/zbase32-rust" }

[dependencies]
clippy = { version = "0.0", optional = true }

[dev-dependencies]
cpython = "0.2"
quickcheck = "0.6"
rand = "0.4"

[features]
python_tests = []
unstable = []
